--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -3,13 +3,12 @@ name: Android CD with Slack Integration
 on:
   push:
     tags:
-      - 'v*' # Trigger on version tags (e.g., v1.0.0)
+      - 'v*'
 
 jobs:
   build:
     name: Build and Upload to Slack
     runs-on: ubuntu-latest
-    timeout-minutes: 120
 
     steps:
       # 1. Checkout code
@@ -42,15 +41,16 @@ jobs:
 
       # 6. Build release APK
       - name: Build APK
-        run: ./gradlew :app:assembleRelease
+        run: ./gradlew :app:assembleDebug
 
-      # 7. Upload APK to Slack
+
+      # 8. Upload APK to Slack
       - name: Upload APK to Slack
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         run: |
           curl -F channels=#deploy \
-               -F file=@app/build/outputs/apk/release/app-release.apk \
+               -F file=@app/build/outputs/apk/debug/app-debug.apk \
                -F initial_comment="New APK build is available for version ${{ github.ref_name }}" \
                -F title="app-release.apk" \
                -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
