--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -41,7 +41,7 @@ jobs:
 
       # 6. Build release APK
       - name: Build APK
-        run: ./gradlew :app:assembleDebug
+        run: ./gradlew assembleDebug
 
 
       # 8. Upload APK to Slack
@@ -49,9 +49,12 @@ jobs:
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         run: |
-          curl -F channels=#deploy \
-               -F file=@app/build/outputs/apk/debug/app-debug.apk \
-               -F initial_comment="New APK build is available for version ${{ github.ref_name }}" \
-               -F title="app-release.apk" \
-               -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
-               https://slack.com/api/files.upload
+          UPLOAD_RESPONSE=$(curl -s -X POST \
+          -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
+          -F "channels=#deploy" \
+          -F "file=@app/build/outputs/apk/debug/app-debug.apk" \
+          -F "filename=app-release.apk" \
+          -F "initial_comment=New APK build available for ${{ github.ref_name }}" \
+          https://slack.com/api/files.upload)
+          
+          echo "Response from Slack: $UPLOAD_RESPONSE"
