--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -16,14 +16,14 @@ jobs:
     steps:
       # 1. Checkout code
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # 2. Set up JDK
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
+          distribution: 'zulu'
           java-version: 17
-          distribution: temurin
 
       # 3. Cache Gradle
       - name: Cache Gradle
