--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -47,5 +47,5 @@ jobs:
         uses: adrey/slack-file-upload-action@master
         with:
           token: ${{ secrets.SLACK_BOT_TOKEN }}
-          path: @app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
           channel: deploy
