--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -43,9 +43,42 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleDebug
 
-      - name: Upload to slack step
-        uses: adrey/slack-file-upload-action@master
-        with:
-          token: ${{ secrets.SLACK_BOT_TOKEN }}
-          path: app/build/outputs/apk/debug/app-debug.apk
-          channel: deploy
+      # 7. Verify APK Path
+      - name: Verify APK Path
+        run: ls -al app/build/outputs/apk/debug
+
+      # 8. Get Upload URL from Slack
+      - name: Get Slack Upload URL
+        id: get_upload_url
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        run: |
+          UPLOAD_RESPONSE=$(curl -s -X POST https://slack.com/api/files.getUploadURLExternal \
+            -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d '{"filename":"app-debug.apk"}')
+
+          echo "UPLOAD_RESPONSE=$UPLOAD_RESPONSE" >> $GITHUB_ENV
+          echo "UPLOAD_URL=$(echo $UPLOAD_RESPONSE | jq -r '.upload_url')" >> $GITHUB_ENV
+          echo "FILE_ID=$(echo $UPLOAD_RESPONSE | jq -r '.file_id')" >> $GITHUB_ENV
+
+      # 9. Upload File to Slack
+      - name: Upload APK to Slack
+        run: |
+          curl -X PUT $UPLOAD_URL \
+          -H "Content-Type: application/octet-stream" \
+          --upload-file app/build/outputs/apk/debug/app-debug.apk
+
+      # 10. Finalize File and Share
+      - name: Finalize and Share File on Slack
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        run: |
+          curl -X POST https://slack.com/api/files.completeUploadExternal \
+          -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
+          -H "Content-Type: application/json" \
+          -d '{
+                "files": [{"id": "'$FILE_ID'"}],
+                "channel_id": "deploy",
+                "initial_comment": "New APK build is available for version '${{ github.ref_name }}'"
+              }'
