--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -50,15 +50,14 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleDebug
 
-      - name: Upload to slack step
-        uses: vaporif/slack-file-upload-action@v1
+      - name: Share a file to that channel
+        uses: slackapi/slack-github-action@v2.0.0
         with:
+          method: files.uploadV2
           token: ${{ secrets.SLACK_BOT_TOKEN }}
-          files: >
-            [
-              {"file": "app/build/outputs/apk/debug/app-debug.apk", "filename": "app-debug.apk"}
-            ]
-          channel_id: C07CF2Z8N83
-          initial_comment: |
-            New release created: ${{ env.TAG_NAME }}
-            Message: ${{ env.TAG_MESSAGE }}
+          payload: |
+            channel_id: C07CF2Z8N83
+            initial_comment: "New release created: ${{ env.TAG_NAME }} Message: ${{ env.TAG_MESSAGE }}"
+            file: "./app/build/outputs/apk/debug/app-debug.apk"
+            filename: "app-debug.apk"
+        
