--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -96,8 +96,7 @@ jobs:
         uses: 8398a7/action-slack@v3
         with:
           status: ${{job.status}}
-          fields: workflow,job,commit,repo,author,took.ref
-          author_name: dyno
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: always()
