--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -96,7 +96,7 @@ jobs:
         uses: 8398a7/action-slack@v3
         with:
           status: ${{job.status}}
-          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+          fields: repo,message,commit,author,action,eventName,ref,workflow
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: always()
